# limit-order-book-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: ex_paper_trader.cpp
include/lob/: matching_engine.hpp  memory_pool.hpp  order.hpp  order_book.hpp  paper_trader.hpp  perf_snapshots.hpp  price_level.hpp  side.hpp  types.hpp
src/: matching_engine.cpp  order_book.cpp  paper_trader.cpp
tests/: hello  hello.cpp  test_matching_engine.cpp  test_order_book_container.cpp  test_paper_trader.cpp  test_perf_metrics.cpp  test_strategy_callback.cpp
